// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Produces expected result when status full dispense is done on a partial dispense 1`] = `
{
  "entry": [
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "destination": [
          {
            "endpoint": "https://directory.spineservices.nhs.uk/STU3/Organization/FH542",
            "receiver": {
              "identifier": {
                "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                "value": "FH542",
              },
            },
          },
        ],
        "eventCoding": {
          "code": "dispense-notification",
          "display": "Dispense Notification",
          "system": "https://fhir.nhs.uk/CodeSystem/message-event",
        },
        "focus": [
          {
            "reference": "urn:uuid:test-uuid",
          },
          {
            "reference": "urn:uuid:test-uuid",
          },
        ],
        "id": "test-uuid",
        "resourceType": "MessageHeader",
        "response": {
          "code": "ok",
          "identifier": "ffffffff-ffff-4fff-bfff-ffffffffffff",
        },
        "sender": {
          "display": "RAZIA|ALI",
          "identifier": {
            "system": "https://fhir.nhs.uk/Id/ods-organization-code",
            "value": "RBA",
          },
          "reference": undefined,
        },
        "source": {
          "endpoint": "https://directory.spineservices.nhs.uk/STU3/Organization/RBA",
        },
      },
    },
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "authorizingPrescription": [
          {
            "reference": "#m1",
          },
        ],
        "contained": [
          {
            "code": [
              {
                "coding": [
                  {
                    "code": "S8000:G8000:R8000",
                    "display": "Clinical Practitioner Access Role",
                    "system": "https://fhir.nhs.uk/CodeSystem/NHSDigital-SDS-JobRoleCode",
                  },
                ],
              },
            ],
            "id": "performer",
            "identifier": [
              {
                "system": "https://fhir.nhs.uk/Id/sds-role-profile-id",
                "value": "555086415105",
              },
            ],
            "organization": {
              "reference": "urn:uuid:2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
            },
            "practitioner": {
              "display": "Mr Peter Potion",
              "identifier": {
                "system": "https://fhir.nhs.uk/Id/sds-user-id",
                "value": "3415870201",
              },
            },
            "resourceType": "PractitionerRole",
            "telecom": [
              {
                "system": "phone",
                "use": "work",
                "value": "0532567890",
              },
            ],
          },
          {
            "authoredOn": "2021-05-07T14:47:29+00:00",
            "basedOn": [
              {
                "extension": [
                  {
                    "extension": [
                      {
                        "url": "numberOfRepeatsAllowed",
                        "valueInteger": 5,
                      },
                    ],
                    "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
                  },
                ],
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                  "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
                },
              },
            ],
            "category": [
              {
                "coding": [
                  {
                    "code": "outpatient",
                    "display": "Outpatient",
                    "system": "http://terminology.hl7.org/CodeSystem/medicationrequest-category",
                  },
                ],
              },
            ],
            "courseOfTherapyType": {
              "coding": [
                {
                  "code": "continuous-repeat-dispensing",
                  "display": "Continuous long term (repeat dispensing)",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationrequest-course-of-therapy",
                },
              ],
            },
            "dispenseRequest": {
              "expectedSupplyDuration": {
                "code": "d",
                "system": "http://unitsofmeasure.org",
                "unit": "days",
                "value": 28,
              },
              "extension": [
                {
                  "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PerformerSiteType",
                  "valueCoding": {
                    "code": "P1",
                    "system": "https://fhir.nhs.uk/CodeSystem/dispensing-site-preference",
                  },
                },
              ],
              "numberOfRepeatsAllowed": 5,
              "performer": {
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                  "value": "FER21",
                },
              },
              "quantity": {
                "code": "428673006",
                "system": "http://snomed.info/sct",
                "unit": "tablet",
                "value": 63,
              },
              "validityPeriod": {
                "end": "2021-10-03",
                "start": "2021-09-03",
              },
            },
            "dosageInstruction": [
              {
                "doseAndRate": [
                  {
                    "doseQuantity": {
                      "code": "mg",
                      "system": "http://unitsofmeasure.org",
                      "unit": "milligram",
                      "value": 10,
                    },
                  },
                ],
                "method": {
                  "coding": [
                    {
                      "code": "422145002",
                      "display": "Inject",
                      "system": "http://snomed.info/sct",
                    },
                  ],
                },
                "route": {
                  "coding": [
                    {
                      "code": "34206005",
                      "display": "Subcutaneous route",
                      "system": "http://snomed.info/sct",
                    },
                  ],
                },
                "text": "10 milligram, Inject, Subcutaneous route, once weekly",
                "timing": {
                  "repeat": {
                    "boundsDuration": {
                      "code": "d",
                      "system": "http://unitsofmeasure.org",
                      "unit": "day",
                      "value": 10,
                    },
                    "frequency": 5,
                    "period": 1,
                    "periodUnit": "d",
                  },
                },
              },
            ],
            "extension": [
              {
                "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PrescriptionType",
                "valueCoding": {
                  "code": "1001",
                  "display": "Outpatient Community Prescriber - Medical Prescriber",
                  "system": "https://fhir.nhs.uk/CodeSystem/prescription-type",
                },
              },
              {
                "extension": [
                  {
                    "url": "authorisationExpiryDate",
                    "valueDateTime": "2020-12-07",
                  },
                ],
                "url": "https://fhir.hl7.org.uk/StructureDefinition/Extension-UKCore-MedicationRepeatInformation",
              },
            ],
            "groupIdentifier": {
              "extension": [
                {
                  "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PrescriptionId",
                  "valueIdentifier": {
                    "system": "https://fhir.nhs.uk/Id/prescription",
                    "value": "10d37820-dda2-4810-94d7-c79e5fdb4b46",
                  },
                },
              ],
              "system": "https://fhir.nhs.uk/Id/prescription-order-number",
              "value": "B407F7-A99968-4DB2AU",
            },
            "id": "m1",
            "identifier": [
              {
                "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
              },
            ],
            "intent": "order",
            "medicationCodeableConcept": {
              "coding": [
                {
                  "code": "15517911000001104",
                  "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "requester": {
              "reference": "urn:uuid:56166769-c1c4-4d07-afa8-132b5dfca666",
            },
            "resourceType": "MedicationRequest",
            "status": "active",
            "subject": {
              "reference": "urn:uuid:78d3c2eb-009e-4ec8-a358-b042954aa9b2",
            },
            "substitution": {
              "allowedBoolean": false,
            },
          },
        ],
        "daysSupply": {
          "code": "d",
          "system": "http://unitsofmeasure.org",
          "unit": "days",
          "value": 28,
        },
        "dosageInstruction": [
          {
            "doseAndRate": [
              {
                "doseQuantity": {
                  "code": "mg",
                  "system": "http://unitsofmeasure.org",
                  "unit": "milligram",
                  "value": 10,
                },
              },
            ],
            "method": {
              "coding": [
                {
                  "code": "422145002",
                  "display": "Inject",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "route": {
              "coding": [
                {
                  "code": "34206005",
                  "display": "Subcutaneous route",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "text": "10 milligram, Inject, Subcutaneous route, once weekly",
            "timing": {
              "repeat": {
                "boundsDuration": {
                  "code": "d",
                  "system": "http://unitsofmeasure.org",
                  "unit": "day",
                  "value": 10,
                },
                "frequency": 5,
                "period": 1,
                "periodUnit": "d",
              },
            },
          },
        ],
        "extension": [
          {
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-TaskBusinessStatus",
            "valueCoding": {
              "code": "0006",
              "display": "Dispensed",
              "system": "https://fhir.nhs.uk/CodeSystem/EPS-task-business-status",
            },
          },
          {
            "extension": [
              {
                "url": "numberOfRepeatsIssued",
                "valueInteger": 0,
              },
              {
                "url": "numberOfRepeatsAllowed",
                "valueInteger": 5,
              },
            ],
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
          },
        ],
        "id": "test-uuid",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/prescription-dispense-item-number",
            "value": "test-uuid",
          },
        ],
        "medicationCodeableConcept": {
          "coding": [
            {
              "code": "15517911000001104",
              "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
              "system": "http://snomed.info/sct",
            },
          ],
        },
        "performer": [
          {
            "actor": {
              "reference": "#performer",
            },
          },
        ],
        "quantity": {
          "code": "428673006",
          "system": "http://snomed.info/sct",
          "unit": "tablet",
          "value": 0,
        },
        "resourceType": "MedicationDispense",
        "status": "unknown",
        "statusReasonCodeableConcept": undefined,
        "subject": {
          "identifier": {
            "system": "https://fhir.nhs.uk/Id/nhs-number",
            "value": "9449305552",
          },
          "reference": "urn:uuid:test-uuid",
        },
        "type": {
          "coding": [
            {
              "code": "0001",
              "display": "Item fully dispensed",
              "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-type",
            },
          ],
        },
        "whenHandedOver": "1975-08-19T16:15:30.000Z",
      },
    },
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "address": [
          {
            "line": [
              "123 Dale Avenue",
              "Long Eaton",
              "Nottingham",
            ],
            "postalCode": "NG10 1NP",
            "use": "home",
          },
        ],
        "birthDate": "1999-01-04",
        "gender": "female",
        "generalPractitioner": [
          {
            "identifier": {
              "system": "https://fhir.nhs.uk/Id/ods-organization-code",
              "value": "B81001",
            },
          },
        ],
        "id": "test-uuid",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/nhs-number",
            "value": "9449305552",
          },
        ],
        "name": [
          {
            "family": "CORY",
            "given": [
              "ETTA",
            ],
            "prefix": [
              "MISS",
            ],
            "use": "usual",
          },
        ],
        "resourceType": "Patient",
      },
    },
    {
      "fullUrl": "urn:uuid:2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
      "resource": {
        "active": true,
        "address": [
          {
            "city": "Shrewsbury",
            "line": [
              "OLD POTTS WAY",
              "SHREWSBURY",
              "SHROPSHIRE",
              "CLEVELAND",
            ],
            "postalCode": "SY3 7ET",
            "use": "work",
          },
        ],
        "extension": [
          {
            "extension": [
              {
                "url": "reimbursementAuthority",
                "valueIdentifier": {
                  "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                  "value": "T1450",
                },
              },
            ],
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ODS-OrganisationRelationships",
          },
        ],
        "id": "2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/ods-organization-code",
            "value": "FLE79",
          },
        ],
        "name": "ASDA INSTORE PHARMACY",
        "resourceType": "Organization",
        "telecom": [
          {
            "system": "phone",
            "use": "work",
            "value": "0113 3180277",
          },
        ],
        "type": [
          {
            "coding": [
              {
                "code": "182",
                "display": "PHARMACY",
                "system": "https://fhir.nhs.uk/CodeSystem/organisation-role",
              },
            ],
          },
        ],
      },
    },
  ],
  "id": "test-uuid",
  "identifier": {
    "system": "https://tools.ietf.org/html/rfc4122",
    "value": "test-uuid",
  },
  "resourceType": "Bundle",
  "type": "message",
}
`;

exports[`Produces expected result when status fully dispensed 1`] = `
{
  "entry": [
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "destination": [
          {
            "endpoint": "https://directory.spineservices.nhs.uk/STU3/Organization/FH542",
            "receiver": {
              "identifier": {
                "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                "value": "FH542",
              },
            },
          },
        ],
        "eventCoding": {
          "code": "dispense-notification",
          "display": "Dispense Notification",
          "system": "https://fhir.nhs.uk/CodeSystem/message-event",
        },
        "focus": [
          {
            "reference": "urn:uuid:test-uuid",
          },
          {
            "reference": "urn:uuid:test-uuid",
          },
        ],
        "id": "test-uuid",
        "resourceType": "MessageHeader",
        "response": {
          "code": "ok",
          "identifier": "ffffffff-ffff-4fff-bfff-ffffffffffff",
        },
        "sender": {
          "display": "RAZIA|ALI",
          "identifier": {
            "system": "https://fhir.nhs.uk/Id/ods-organization-code",
            "value": "RBA",
          },
          "reference": undefined,
        },
        "source": {
          "endpoint": "https://directory.spineservices.nhs.uk/STU3/Organization/RBA",
        },
      },
    },
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "authorizingPrescription": [
          {
            "reference": "#m1",
          },
        ],
        "contained": [
          {
            "code": [
              {
                "coding": [
                  {
                    "code": "S8000:G8000:R8000",
                    "display": "Clinical Practitioner Access Role",
                    "system": "https://fhir.nhs.uk/CodeSystem/NHSDigital-SDS-JobRoleCode",
                  },
                ],
              },
            ],
            "id": "performer",
            "identifier": [
              {
                "system": "https://fhir.nhs.uk/Id/sds-role-profile-id",
                "value": "555086415105",
              },
            ],
            "organization": {
              "reference": "urn:uuid:2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
            },
            "practitioner": {
              "display": "Mr Peter Potion",
              "identifier": {
                "system": "https://fhir.nhs.uk/Id/sds-user-id",
                "value": "3415870201",
              },
            },
            "resourceType": "PractitionerRole",
            "telecom": [
              {
                "system": "phone",
                "use": "work",
                "value": "0532567890",
              },
            ],
          },
          {
            "authoredOn": "2021-05-07T14:47:29+00:00",
            "basedOn": [
              {
                "extension": [
                  {
                    "extension": [
                      {
                        "url": "numberOfRepeatsAllowed",
                        "valueInteger": 5,
                      },
                    ],
                    "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
                  },
                ],
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                  "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
                },
              },
            ],
            "category": [
              {
                "coding": [
                  {
                    "code": "outpatient",
                    "display": "Outpatient",
                    "system": "http://terminology.hl7.org/CodeSystem/medicationrequest-category",
                  },
                ],
              },
            ],
            "courseOfTherapyType": {
              "coding": [
                {
                  "code": "continuous-repeat-dispensing",
                  "display": "Continuous long term (repeat dispensing)",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationrequest-course-of-therapy",
                },
              ],
            },
            "dispenseRequest": {
              "expectedSupplyDuration": {
                "code": "d",
                "system": "http://unitsofmeasure.org",
                "unit": "days",
                "value": 28,
              },
              "extension": [
                {
                  "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PerformerSiteType",
                  "valueCoding": {
                    "code": "P1",
                    "system": "https://fhir.nhs.uk/CodeSystem/dispensing-site-preference",
                  },
                },
              ],
              "numberOfRepeatsAllowed": 5,
              "performer": {
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                  "value": "FER21",
                },
              },
              "quantity": {
                "code": "428673006",
                "system": "http://snomed.info/sct",
                "unit": "tablet",
                "value": 63,
              },
              "validityPeriod": {
                "end": "2021-10-03",
                "start": "2021-09-03",
              },
            },
            "dosageInstruction": [
              {
                "doseAndRate": [
                  {
                    "doseQuantity": {
                      "code": "mg",
                      "system": "http://unitsofmeasure.org",
                      "unit": "milligram",
                      "value": 10,
                    },
                  },
                ],
                "method": {
                  "coding": [
                    {
                      "code": "422145002",
                      "display": "Inject",
                      "system": "http://snomed.info/sct",
                    },
                  ],
                },
                "route": {
                  "coding": [
                    {
                      "code": "34206005",
                      "display": "Subcutaneous route",
                      "system": "http://snomed.info/sct",
                    },
                  ],
                },
                "text": "10 milligram, Inject, Subcutaneous route, once weekly",
                "timing": {
                  "repeat": {
                    "boundsDuration": {
                      "code": "d",
                      "system": "http://unitsofmeasure.org",
                      "unit": "day",
                      "value": 10,
                    },
                    "frequency": 5,
                    "period": 1,
                    "periodUnit": "d",
                  },
                },
              },
            ],
            "extension": [
              {
                "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PrescriptionType",
                "valueCoding": {
                  "code": "1001",
                  "display": "Outpatient Community Prescriber - Medical Prescriber",
                  "system": "https://fhir.nhs.uk/CodeSystem/prescription-type",
                },
              },
              {
                "extension": [
                  {
                    "url": "authorisationExpiryDate",
                    "valueDateTime": "2020-12-07",
                  },
                ],
                "url": "https://fhir.hl7.org.uk/StructureDefinition/Extension-UKCore-MedicationRepeatInformation",
              },
            ],
            "groupIdentifier": {
              "extension": [
                {
                  "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PrescriptionId",
                  "valueIdentifier": {
                    "system": "https://fhir.nhs.uk/Id/prescription",
                    "value": "10d37820-dda2-4810-94d7-c79e5fdb4b46",
                  },
                },
              ],
              "system": "https://fhir.nhs.uk/Id/prescription-order-number",
              "value": "B407F7-A99968-4DB2AU",
            },
            "id": "m1",
            "identifier": [
              {
                "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
              },
            ],
            "intent": "order",
            "medicationCodeableConcept": {
              "coding": [
                {
                  "code": "15517911000001104",
                  "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "requester": {
              "reference": "urn:uuid:56166769-c1c4-4d07-afa8-132b5dfca666",
            },
            "resourceType": "MedicationRequest",
            "status": "active",
            "subject": {
              "reference": "urn:uuid:78d3c2eb-009e-4ec8-a358-b042954aa9b2",
            },
            "substitution": {
              "allowedBoolean": false,
            },
          },
        ],
        "daysSupply": {
          "code": "d",
          "system": "http://unitsofmeasure.org",
          "unit": "days",
          "value": 28,
        },
        "dosageInstruction": [
          {
            "doseAndRate": [
              {
                "doseQuantity": {
                  "code": "mg",
                  "system": "http://unitsofmeasure.org",
                  "unit": "milligram",
                  "value": 10,
                },
              },
            ],
            "method": {
              "coding": [
                {
                  "code": "422145002",
                  "display": "Inject",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "route": {
              "coding": [
                {
                  "code": "34206005",
                  "display": "Subcutaneous route",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "text": "10 milligram, Inject, Subcutaneous route, once weekly",
            "timing": {
              "repeat": {
                "boundsDuration": {
                  "code": "d",
                  "system": "http://unitsofmeasure.org",
                  "unit": "day",
                  "value": 10,
                },
                "frequency": 5,
                "period": 1,
                "periodUnit": "d",
              },
            },
          },
        ],
        "extension": [
          {
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-TaskBusinessStatus",
            "valueCoding": {
              "code": "0006",
              "display": "Dispensed",
              "system": "https://fhir.nhs.uk/CodeSystem/EPS-task-business-status",
            },
          },
          {
            "extension": [
              {
                "url": "numberOfRepeatsIssued",
                "valueInteger": 0,
              },
              {
                "url": "numberOfRepeatsAllowed",
                "valueInteger": 5,
              },
            ],
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
          },
        ],
        "id": "test-uuid",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/prescription-dispense-item-number",
            "value": "test-uuid",
          },
        ],
        "medicationCodeableConcept": {
          "coding": [
            {
              "code": "15517911000001104",
              "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
              "system": "http://snomed.info/sct",
            },
          ],
        },
        "performer": [
          {
            "actor": {
              "reference": "#performer",
            },
          },
        ],
        "quantity": {
          "code": "428673006",
          "system": "http://snomed.info/sct",
          "unit": "tablet",
          "value": 0,
        },
        "resourceType": "MedicationDispense",
        "status": "unknown",
        "statusReasonCodeableConcept": undefined,
        "subject": {
          "identifier": {
            "system": "https://fhir.nhs.uk/Id/nhs-number",
            "value": "9449305552",
          },
          "reference": "urn:uuid:test-uuid",
        },
        "type": {
          "coding": [
            {
              "code": "0001",
              "display": "Item fully dispensed",
              "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-type",
            },
          ],
        },
        "whenHandedOver": "1975-08-19T16:15:30.000Z",
      },
    },
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "address": [
          {
            "line": [
              "123 Dale Avenue",
              "Long Eaton",
              "Nottingham",
            ],
            "postalCode": "NG10 1NP",
            "use": "home",
          },
        ],
        "birthDate": "1999-01-04",
        "gender": "female",
        "generalPractitioner": [
          {
            "identifier": {
              "system": "https://fhir.nhs.uk/Id/ods-organization-code",
              "value": "B81001",
            },
          },
        ],
        "id": "test-uuid",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/nhs-number",
            "value": "9449305552",
          },
        ],
        "name": [
          {
            "family": "CORY",
            "given": [
              "ETTA",
            ],
            "prefix": [
              "MISS",
            ],
            "use": "usual",
          },
        ],
        "resourceType": "Patient",
      },
    },
    {
      "fullUrl": "urn:uuid:2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
      "resource": {
        "active": true,
        "address": [
          {
            "city": "Shrewsbury",
            "line": [
              "OLD POTTS WAY",
              "SHREWSBURY",
              "SHROPSHIRE",
              "CLEVELAND",
            ],
            "postalCode": "SY3 7ET",
            "use": "work",
          },
        ],
        "extension": [
          {
            "extension": [
              {
                "url": "reimbursementAuthority",
                "valueIdentifier": {
                  "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                  "value": "T1450",
                },
              },
            ],
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ODS-OrganisationRelationships",
          },
        ],
        "id": "2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/ods-organization-code",
            "value": "FLE79",
          },
        ],
        "name": "ASDA INSTORE PHARMACY",
        "resourceType": "Organization",
        "telecom": [
          {
            "system": "phone",
            "use": "work",
            "value": "0113 3180277",
          },
        ],
        "type": [
          {
            "coding": [
              {
                "code": "182",
                "display": "PHARMACY",
                "system": "https://fhir.nhs.uk/CodeSystem/organisation-role",
              },
            ],
          },
        ],
      },
    },
  ],
  "id": "test-uuid",
  "identifier": {
    "system": "https://tools.ietf.org/html/rfc4122",
    "value": "test-uuid",
  },
  "resourceType": "Bundle",
  "type": "message",
}
`;

exports[`Produces expected result when status partial dispense is done on a partial dispense 1`] = `
{
  "entry": [
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "destination": [
          {
            "endpoint": "https://directory.spineservices.nhs.uk/STU3/Organization/FH542",
            "receiver": {
              "identifier": {
                "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                "value": "FH542",
              },
            },
          },
        ],
        "eventCoding": {
          "code": "dispense-notification",
          "display": "Dispense Notification",
          "system": "https://fhir.nhs.uk/CodeSystem/message-event",
        },
        "focus": [
          {
            "reference": "urn:uuid:test-uuid",
          },
          {
            "reference": "urn:uuid:test-uuid",
          },
        ],
        "id": "test-uuid",
        "resourceType": "MessageHeader",
        "response": {
          "code": "ok",
          "identifier": "ffffffff-ffff-4fff-bfff-ffffffffffff",
        },
        "sender": {
          "display": "RAZIA|ALI",
          "identifier": {
            "system": "https://fhir.nhs.uk/Id/ods-organization-code",
            "value": "RBA",
          },
          "reference": undefined,
        },
        "source": {
          "endpoint": "https://directory.spineservices.nhs.uk/STU3/Organization/RBA",
        },
      },
    },
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "authorizingPrescription": [
          {
            "reference": "#m1",
          },
        ],
        "contained": [
          {
            "code": [
              {
                "coding": [
                  {
                    "code": "S8000:G8000:R8000",
                    "display": "Clinical Practitioner Access Role",
                    "system": "https://fhir.nhs.uk/CodeSystem/NHSDigital-SDS-JobRoleCode",
                  },
                ],
              },
            ],
            "id": "performer",
            "identifier": [
              {
                "system": "https://fhir.nhs.uk/Id/sds-role-profile-id",
                "value": "555086415105",
              },
            ],
            "organization": {
              "reference": "urn:uuid:2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
            },
            "practitioner": {
              "display": "Mr Peter Potion",
              "identifier": {
                "system": "https://fhir.nhs.uk/Id/sds-user-id",
                "value": "3415870201",
              },
            },
            "resourceType": "PractitionerRole",
            "telecom": [
              {
                "system": "phone",
                "use": "work",
                "value": "0532567890",
              },
            ],
          },
          {
            "authoredOn": "2021-05-07T14:47:29+00:00",
            "basedOn": [
              {
                "extension": [
                  {
                    "extension": [
                      {
                        "url": "numberOfRepeatsAllowed",
                        "valueInteger": 5,
                      },
                    ],
                    "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
                  },
                ],
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                  "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
                },
              },
            ],
            "category": [
              {
                "coding": [
                  {
                    "code": "outpatient",
                    "display": "Outpatient",
                    "system": "http://terminology.hl7.org/CodeSystem/medicationrequest-category",
                  },
                ],
              },
            ],
            "courseOfTherapyType": {
              "coding": [
                {
                  "code": "continuous-repeat-dispensing",
                  "display": "Continuous long term (repeat dispensing)",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationrequest-course-of-therapy",
                },
              ],
            },
            "dispenseRequest": {
              "expectedSupplyDuration": {
                "code": "d",
                "system": "http://unitsofmeasure.org",
                "unit": "days",
                "value": 28,
              },
              "extension": [
                {
                  "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PerformerSiteType",
                  "valueCoding": {
                    "code": "P1",
                    "system": "https://fhir.nhs.uk/CodeSystem/dispensing-site-preference",
                  },
                },
              ],
              "numberOfRepeatsAllowed": 5,
              "performer": {
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                  "value": "FER21",
                },
              },
              "quantity": {
                "code": "428673006",
                "system": "http://snomed.info/sct",
                "unit": "tablet",
                "value": 63,
              },
              "validityPeriod": {
                "end": "2021-10-03",
                "start": "2021-09-03",
              },
            },
            "dosageInstruction": [
              {
                "doseAndRate": [
                  {
                    "doseQuantity": {
                      "code": "mg",
                      "system": "http://unitsofmeasure.org",
                      "unit": "milligram",
                      "value": 10,
                    },
                  },
                ],
                "method": {
                  "coding": [
                    {
                      "code": "422145002",
                      "display": "Inject",
                      "system": "http://snomed.info/sct",
                    },
                  ],
                },
                "route": {
                  "coding": [
                    {
                      "code": "34206005",
                      "display": "Subcutaneous route",
                      "system": "http://snomed.info/sct",
                    },
                  ],
                },
                "text": "10 milligram, Inject, Subcutaneous route, once weekly",
                "timing": {
                  "repeat": {
                    "boundsDuration": {
                      "code": "d",
                      "system": "http://unitsofmeasure.org",
                      "unit": "day",
                      "value": 10,
                    },
                    "frequency": 5,
                    "period": 1,
                    "periodUnit": "d",
                  },
                },
              },
            ],
            "extension": [
              {
                "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PrescriptionType",
                "valueCoding": {
                  "code": "1001",
                  "display": "Outpatient Community Prescriber - Medical Prescriber",
                  "system": "https://fhir.nhs.uk/CodeSystem/prescription-type",
                },
              },
              {
                "extension": [
                  {
                    "url": "authorisationExpiryDate",
                    "valueDateTime": "2020-12-07",
                  },
                ],
                "url": "https://fhir.hl7.org.uk/StructureDefinition/Extension-UKCore-MedicationRepeatInformation",
              },
            ],
            "groupIdentifier": {
              "extension": [
                {
                  "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PrescriptionId",
                  "valueIdentifier": {
                    "system": "https://fhir.nhs.uk/Id/prescription",
                    "value": "10d37820-dda2-4810-94d7-c79e5fdb4b46",
                  },
                },
              ],
              "system": "https://fhir.nhs.uk/Id/prescription-order-number",
              "value": "B407F7-A99968-4DB2AU",
            },
            "id": "m1",
            "identifier": [
              {
                "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
              },
            ],
            "intent": "order",
            "medicationCodeableConcept": {
              "coding": [
                {
                  "code": "15517911000001104",
                  "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "requester": {
              "reference": "urn:uuid:56166769-c1c4-4d07-afa8-132b5dfca666",
            },
            "resourceType": "MedicationRequest",
            "status": "active",
            "subject": {
              "reference": "urn:uuid:78d3c2eb-009e-4ec8-a358-b042954aa9b2",
            },
            "substitution": {
              "allowedBoolean": false,
            },
          },
        ],
        "daysSupply": {
          "code": "d",
          "system": "http://unitsofmeasure.org",
          "unit": "days",
          "value": 28,
        },
        "dosageInstruction": [
          {
            "doseAndRate": [
              {
                "doseQuantity": {
                  "code": "mg",
                  "system": "http://unitsofmeasure.org",
                  "unit": "milligram",
                  "value": 10,
                },
              },
            ],
            "method": {
              "coding": [
                {
                  "code": "422145002",
                  "display": "Inject",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "route": {
              "coding": [
                {
                  "code": "34206005",
                  "display": "Subcutaneous route",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "text": "10 milligram, Inject, Subcutaneous route, once weekly",
            "timing": {
              "repeat": {
                "boundsDuration": {
                  "code": "d",
                  "system": "http://unitsofmeasure.org",
                  "unit": "day",
                  "value": 10,
                },
                "frequency": 5,
                "period": 1,
                "periodUnit": "d",
              },
            },
          },
        ],
        "extension": [
          {
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-TaskBusinessStatus",
            "valueCoding": {
              "code": "0003",
              "display": "With Dispenser - Active",
              "system": "https://fhir.nhs.uk/CodeSystem/EPS-task-business-status",
            },
          },
          {
            "extension": [
              {
                "url": "numberOfRepeatsIssued",
                "valueInteger": 0,
              },
              {
                "url": "numberOfRepeatsAllowed",
                "valueInteger": 5,
              },
            ],
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
          },
        ],
        "id": "test-uuid",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/prescription-dispense-item-number",
            "value": "test-uuid",
          },
        ],
        "medicationCodeableConcept": {
          "coding": [
            {
              "code": "15517911000001104",
              "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
              "system": "http://snomed.info/sct",
            },
          ],
        },
        "performer": [
          {
            "actor": {
              "reference": "#performer",
            },
          },
        ],
        "quantity": {
          "code": "428673006",
          "system": "http://snomed.info/sct",
          "unit": "tablet",
          "value": 3,
        },
        "resourceType": "MedicationDispense",
        "status": "unknown",
        "statusReasonCodeableConcept": undefined,
        "subject": {
          "identifier": {
            "system": "https://fhir.nhs.uk/Id/nhs-number",
            "value": "9449305552",
          },
          "reference": "urn:uuid:test-uuid",
        },
        "type": {
          "coding": [
            {
              "code": "0003",
              "display": "Item dispensed - partial",
              "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-type",
            },
          ],
        },
        "whenHandedOver": "1975-08-19T16:15:30.000Z",
      },
    },
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "address": [
          {
            "line": [
              "123 Dale Avenue",
              "Long Eaton",
              "Nottingham",
            ],
            "postalCode": "NG10 1NP",
            "use": "home",
          },
        ],
        "birthDate": "1999-01-04",
        "gender": "female",
        "generalPractitioner": [
          {
            "identifier": {
              "system": "https://fhir.nhs.uk/Id/ods-organization-code",
              "value": "B81001",
            },
          },
        ],
        "id": "test-uuid",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/nhs-number",
            "value": "9449305552",
          },
        ],
        "name": [
          {
            "family": "CORY",
            "given": [
              "ETTA",
            ],
            "prefix": [
              "MISS",
            ],
            "use": "usual",
          },
        ],
        "resourceType": "Patient",
      },
    },
    {
      "fullUrl": "urn:uuid:2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
      "resource": {
        "active": true,
        "address": [
          {
            "city": "Shrewsbury",
            "line": [
              "OLD POTTS WAY",
              "SHREWSBURY",
              "SHROPSHIRE",
              "CLEVELAND",
            ],
            "postalCode": "SY3 7ET",
            "use": "work",
          },
        ],
        "extension": [
          {
            "extension": [
              {
                "url": "reimbursementAuthority",
                "valueIdentifier": {
                  "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                  "value": "T1450",
                },
              },
            ],
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ODS-OrganisationRelationships",
          },
        ],
        "id": "2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/ods-organization-code",
            "value": "FLE79",
          },
        ],
        "name": "ASDA INSTORE PHARMACY",
        "resourceType": "Organization",
        "telecom": [
          {
            "system": "phone",
            "use": "work",
            "value": "0113 3180277",
          },
        ],
        "type": [
          {
            "coding": [
              {
                "code": "182",
                "display": "PHARMACY",
                "system": "https://fhir.nhs.uk/CodeSystem/organisation-role",
              },
            ],
          },
        ],
      },
    },
  ],
  "id": "test-uuid",
  "identifier": {
    "system": "https://tools.ietf.org/html/rfc4122",
    "value": "test-uuid",
  },
  "resourceType": "Bundle",
  "type": "message",
}
`;

exports[`Produces expected result when status partially dispensed 1`] = `
{
  "entry": [
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "destination": [
          {
            "endpoint": "https://directory.spineservices.nhs.uk/STU3/Organization/FH542",
            "receiver": {
              "identifier": {
                "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                "value": "FH542",
              },
            },
          },
        ],
        "eventCoding": {
          "code": "dispense-notification",
          "display": "Dispense Notification",
          "system": "https://fhir.nhs.uk/CodeSystem/message-event",
        },
        "focus": [
          {
            "reference": "urn:uuid:test-uuid",
          },
          {
            "reference": "urn:uuid:test-uuid",
          },
        ],
        "id": "test-uuid",
        "resourceType": "MessageHeader",
        "response": {
          "code": "ok",
          "identifier": "ffffffff-ffff-4fff-bfff-ffffffffffff",
        },
        "sender": {
          "display": "RAZIA|ALI",
          "identifier": {
            "system": "https://fhir.nhs.uk/Id/ods-organization-code",
            "value": "RBA",
          },
          "reference": undefined,
        },
        "source": {
          "endpoint": "https://directory.spineservices.nhs.uk/STU3/Organization/RBA",
        },
      },
    },
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "authorizingPrescription": [
          {
            "reference": "#m1",
          },
        ],
        "contained": [
          {
            "code": [
              {
                "coding": [
                  {
                    "code": "S8000:G8000:R8000",
                    "display": "Clinical Practitioner Access Role",
                    "system": "https://fhir.nhs.uk/CodeSystem/NHSDigital-SDS-JobRoleCode",
                  },
                ],
              },
            ],
            "id": "performer",
            "identifier": [
              {
                "system": "https://fhir.nhs.uk/Id/sds-role-profile-id",
                "value": "555086415105",
              },
            ],
            "organization": {
              "reference": "urn:uuid:2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
            },
            "practitioner": {
              "display": "Mr Peter Potion",
              "identifier": {
                "system": "https://fhir.nhs.uk/Id/sds-user-id",
                "value": "3415870201",
              },
            },
            "resourceType": "PractitionerRole",
            "telecom": [
              {
                "system": "phone",
                "use": "work",
                "value": "0532567890",
              },
            ],
          },
          {
            "authoredOn": "2021-05-07T14:47:29+00:00",
            "basedOn": [
              {
                "extension": [
                  {
                    "extension": [
                      {
                        "url": "numberOfRepeatsAllowed",
                        "valueInteger": 5,
                      },
                    ],
                    "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
                  },
                ],
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                  "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
                },
              },
            ],
            "category": [
              {
                "coding": [
                  {
                    "code": "outpatient",
                    "display": "Outpatient",
                    "system": "http://terminology.hl7.org/CodeSystem/medicationrequest-category",
                  },
                ],
              },
            ],
            "courseOfTherapyType": {
              "coding": [
                {
                  "code": "continuous-repeat-dispensing",
                  "display": "Continuous long term (repeat dispensing)",
                  "system": "https://fhir.nhs.uk/CodeSystem/medicationrequest-course-of-therapy",
                },
              ],
            },
            "dispenseRequest": {
              "expectedSupplyDuration": {
                "code": "d",
                "system": "http://unitsofmeasure.org",
                "unit": "days",
                "value": 28,
              },
              "extension": [
                {
                  "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PerformerSiteType",
                  "valueCoding": {
                    "code": "P1",
                    "system": "https://fhir.nhs.uk/CodeSystem/dispensing-site-preference",
                  },
                },
              ],
              "numberOfRepeatsAllowed": 5,
              "performer": {
                "identifier": {
                  "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                  "value": "FER21",
                },
              },
              "quantity": {
                "code": "428673006",
                "system": "http://snomed.info/sct",
                "unit": "tablet",
                "value": 63,
              },
              "validityPeriod": {
                "end": "2021-10-03",
                "start": "2021-09-03",
              },
            },
            "dosageInstruction": [
              {
                "doseAndRate": [
                  {
                    "doseQuantity": {
                      "code": "mg",
                      "system": "http://unitsofmeasure.org",
                      "unit": "milligram",
                      "value": 10,
                    },
                  },
                ],
                "method": {
                  "coding": [
                    {
                      "code": "422145002",
                      "display": "Inject",
                      "system": "http://snomed.info/sct",
                    },
                  ],
                },
                "route": {
                  "coding": [
                    {
                      "code": "34206005",
                      "display": "Subcutaneous route",
                      "system": "http://snomed.info/sct",
                    },
                  ],
                },
                "text": "10 milligram, Inject, Subcutaneous route, once weekly",
                "timing": {
                  "repeat": {
                    "boundsDuration": {
                      "code": "d",
                      "system": "http://unitsofmeasure.org",
                      "unit": "day",
                      "value": 10,
                    },
                    "frequency": 5,
                    "period": 1,
                    "periodUnit": "d",
                  },
                },
              },
            ],
            "extension": [
              {
                "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PrescriptionType",
                "valueCoding": {
                  "code": "1001",
                  "display": "Outpatient Community Prescriber - Medical Prescriber",
                  "system": "https://fhir.nhs.uk/CodeSystem/prescription-type",
                },
              },
              {
                "extension": [
                  {
                    "url": "authorisationExpiryDate",
                    "valueDateTime": "2020-12-07",
                  },
                ],
                "url": "https://fhir.hl7.org.uk/StructureDefinition/Extension-UKCore-MedicationRepeatInformation",
              },
            ],
            "groupIdentifier": {
              "extension": [
                {
                  "url": "https://fhir.nhs.uk/StructureDefinition/Extension-DM-PrescriptionId",
                  "valueIdentifier": {
                    "system": "https://fhir.nhs.uk/Id/prescription",
                    "value": "10d37820-dda2-4810-94d7-c79e5fdb4b46",
                  },
                },
              ],
              "system": "https://fhir.nhs.uk/Id/prescription-order-number",
              "value": "B407F7-A99968-4DB2AU",
            },
            "id": "m1",
            "identifier": [
              {
                "system": "https://fhir.nhs.uk/Id/prescription-order-item-number",
                "value": "a54219b8-f741-4c47-b662-e4f8dfa49ab6",
              },
            ],
            "intent": "order",
            "medicationCodeableConcept": {
              "coding": [
                {
                  "code": "15517911000001104",
                  "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "requester": {
              "reference": "urn:uuid:56166769-c1c4-4d07-afa8-132b5dfca666",
            },
            "resourceType": "MedicationRequest",
            "status": "active",
            "subject": {
              "reference": "urn:uuid:78d3c2eb-009e-4ec8-a358-b042954aa9b2",
            },
            "substitution": {
              "allowedBoolean": false,
            },
          },
        ],
        "daysSupply": {
          "code": "d",
          "system": "http://unitsofmeasure.org",
          "unit": "days",
          "value": 28,
        },
        "dosageInstruction": [
          {
            "doseAndRate": [
              {
                "doseQuantity": {
                  "code": "mg",
                  "system": "http://unitsofmeasure.org",
                  "unit": "milligram",
                  "value": 10,
                },
              },
            ],
            "method": {
              "coding": [
                {
                  "code": "422145002",
                  "display": "Inject",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "route": {
              "coding": [
                {
                  "code": "34206005",
                  "display": "Subcutaneous route",
                  "system": "http://snomed.info/sct",
                },
              ],
            },
            "text": "10 milligram, Inject, Subcutaneous route, once weekly",
            "timing": {
              "repeat": {
                "boundsDuration": {
                  "code": "d",
                  "system": "http://unitsofmeasure.org",
                  "unit": "day",
                  "value": 10,
                },
                "frequency": 5,
                "period": 1,
                "periodUnit": "d",
              },
            },
          },
        ],
        "extension": [
          {
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-TaskBusinessStatus",
            "valueCoding": {
              "code": "0003",
              "display": "With Dispenser - Active",
              "system": "https://fhir.nhs.uk/CodeSystem/EPS-task-business-status",
            },
          },
          {
            "extension": [
              {
                "url": "numberOfRepeatsIssued",
                "valueInteger": 0,
              },
              {
                "url": "numberOfRepeatsAllowed",
                "valueInteger": 5,
              },
            ],
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-EPS-RepeatInformation",
          },
        ],
        "id": "test-uuid",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/prescription-dispense-item-number",
            "value": "test-uuid",
          },
        ],
        "medicationCodeableConcept": {
          "coding": [
            {
              "code": "15517911000001104",
              "display": "Methotrexate 10mg/0.2ml solution for injection pre-filled syringes",
              "system": "http://snomed.info/sct",
            },
          ],
        },
        "performer": [
          {
            "actor": {
              "reference": "#performer",
            },
          },
        ],
        "quantity": {
          "code": "428673006",
          "system": "http://snomed.info/sct",
          "unit": "tablet",
          "value": 1,
        },
        "resourceType": "MedicationDispense",
        "status": "unknown",
        "statusReasonCodeableConcept": undefined,
        "subject": {
          "identifier": {
            "system": "https://fhir.nhs.uk/Id/nhs-number",
            "value": "9449305552",
          },
          "reference": "urn:uuid:test-uuid",
        },
        "type": {
          "coding": [
            {
              "code": "0003",
              "display": "Item dispensed - partial",
              "system": "https://fhir.nhs.uk/CodeSystem/medicationdispense-type",
            },
          ],
        },
        "whenHandedOver": "1975-08-19T16:15:30.000Z",
      },
    },
    {
      "fullUrl": "urn:uuid:test-uuid",
      "resource": {
        "address": [
          {
            "line": [
              "123 Dale Avenue",
              "Long Eaton",
              "Nottingham",
            ],
            "postalCode": "NG10 1NP",
            "use": "home",
          },
        ],
        "birthDate": "1999-01-04",
        "gender": "female",
        "generalPractitioner": [
          {
            "identifier": {
              "system": "https://fhir.nhs.uk/Id/ods-organization-code",
              "value": "B81001",
            },
          },
        ],
        "id": "test-uuid",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/nhs-number",
            "value": "9449305552",
          },
        ],
        "name": [
          {
            "family": "CORY",
            "given": [
              "ETTA",
            ],
            "prefix": [
              "MISS",
            ],
            "use": "usual",
          },
        ],
        "resourceType": "Patient",
      },
    },
    {
      "fullUrl": "urn:uuid:2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
      "resource": {
        "active": true,
        "address": [
          {
            "city": "Shrewsbury",
            "line": [
              "OLD POTTS WAY",
              "SHREWSBURY",
              "SHROPSHIRE",
              "CLEVELAND",
            ],
            "postalCode": "SY3 7ET",
            "use": "work",
          },
        ],
        "extension": [
          {
            "extension": [
              {
                "url": "reimbursementAuthority",
                "valueIdentifier": {
                  "system": "https://fhir.nhs.uk/Id/ods-organization-code",
                  "value": "T1450",
                },
              },
            ],
            "url": "https://fhir.nhs.uk/StructureDefinition/Extension-ODS-OrganisationRelationships",
          },
        ],
        "id": "2bf9f37c-d88b-4f86-ad5f-373c1416e04b",
        "identifier": [
          {
            "system": "https://fhir.nhs.uk/Id/ods-organization-code",
            "value": "FLE79",
          },
        ],
        "name": "ASDA INSTORE PHARMACY",
        "resourceType": "Organization",
        "telecom": [
          {
            "system": "phone",
            "use": "work",
            "value": "0113 3180277",
          },
        ],
        "type": [
          {
            "coding": [
              {
                "code": "182",
                "display": "PHARMACY",
                "system": "https://fhir.nhs.uk/CodeSystem/organisation-role",
              },
            ],
          },
        ],
      },
    },
  ],
  "id": "test-uuid",
  "identifier": {
    "system": "https://tools.ietf.org/html/rfc4122",
    "value": "test-uuid",
  },
  "resourceType": "Bundle",
  "type": "message",
}
`;
